# iaifi-research-blog

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-paper-ingestion-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-content-generation-and-concept-extraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-admin-review-interface/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
admin/: app.py
admin/routes/: concepts.py  discovery.py  generation.py  papers.py  pipeline.py  posts.py
admin/static/: concepts.html  index.html  review.html
pipeline/: concepts_taxonomy.yaml  config.py  db.py  export.py  fetch_paperscape_coords.py  generate_nicknames.py  models.py  orchestrator.py
pipeline/extractor/: figure_extractor.py  pdf_reader.py
pipeline/fetcher/: arxiv_client.py  iaifi_scraper.py
pipeline/generator/: claude_cli_client.py  concept_extractor.py  image_fixer.py  llm_client.py  post_fixer.py  post_generator.py
site/: astro.config.mjs  package-lock.json  package.json
site/scripts/: compute-scatter.cjs  iaifi-members.json
site/src/: content.config.ts
(+679 files in other folders)
